--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- <script src="./task_2.js" type="module"></script> -->
     <!-- <script src="./task_3.js" type="module"></script> -->
     <!-- <script src="./task_4.js" type="module"></script> -->
-    <script src="./task_5.js" type="module"></script>
+    <!-- <script src="./task_5.js" type="module"></script> -->
     <!-- <script src="./task_6.js" type="module"></script> -->
 </body>
 </html>
